# smart_home_server

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init.sql  pyproject.toml
src/: main.py
src/bme/: bme_sensor.py
src/bme680/: __init__.py
src/database/: __init__.py  postgres_manager.py
src/database/models/: __init__.py  sensor_data.py
src/logger/: logger.py
src/samples/: __init__.py  detect_slack_message.py  polling_from_aws.py  polling_from_slack.py  read_all.py
src/scheduler/: tasks.py
src/slack/: __init__.py  slack_manager.py
src/utils/: __init__.py  calculate_aqi.py  calculate_di.py  create_graph.py  error_types.py
